@@ -76,6 +76,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #26186: Remove an invalid type check in importlib.util.LazyLoader.
+
 - Issue #26367: importlib.__init__() raises RuntimeError like
   builtins.__import__() when ``level`` is specified but without an accompanying
   package specified.
